# SDL2CommanderTux

./: Actor.cpp  Actor.h  Bullet.h  CMakeLists.txt  CommanderTux.cpp  Defines.h  Duel.cpp  Duel.h  Editor.cpp  Editor.h  Enemy.cpp  Enemy.h  Filenames.h  Framework.cpp  Framework.h  Game.cpp  Game.h  Item.h  Level.cpp  Level.h  LinkedList.h  Load.h  Player.cpp  Player.h  SLevel.h  Splash.cpp  Splash.h  Sprite.cpp  Sprite.h  State.h  Text.cpp  Text.h  Worldmap.cpp  Worldmap.h
data/levels/: level1.ctux  level2.ctux  level3.ctux  level4.ctux  start.ctux
data/levels/duel/: level1.ctux
doc/: Readme.txt
